fix(filter-tag): v1 open not showing (#11561)

--- a/packages/carbon-web-components/src/components/tag/tag.scss
+++ b/packages/carbon-web-components/src/components/tag/tag.scss
@@ -1,5 +1,5 @@
 //
-// Copyright IBM Corp. 2019, 2022
+// Copyright IBM Corp. 2019, 2024
 //
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
@@ -74,10 +74,10 @@ $css--plex: true !default;
   @extend .#{$prefix}--tag--filter;
 
   display: none;
+}
 
-  &[open] {
-    display: inline-flex;
-  }
+:host(#{$prefix}-filter-tag[open]) {
+  display: inline-flex;
 }
 
 :host(#{$prefix}-filter-tag[disabled]) .#{$prefix}--tag__close-icon {
